[gd_scene load_steps=2 format=3 uid="uid://bvtsd0mwq121m"]

[ext_resource type="Script" path="res://Control.gd" id="1_g576l"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 34.0
offset_top = 50.0
offset_right = 34.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g576l")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_right = 156.0
offset_bottom = 54.0

[node name="HTTPRequest" type="HTTPRequest" parent="Button"]

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
offset_left = 12.0
offset_top = 13.0
offset_right = 135.0
offset_bottom = 44.0
text = "Connect UMLS"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 263.0
offset_top = 4.0
offset_right = 691.0
offset_bottom = 252.0
fit_content = true

[node name="ProgressBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 65.0
offset_right = 153.0
offset_bottom = 92.0

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.015
offset_left = 10.0
offset_top = 109.0
offset_right = 149.0
offset_bottom = 126.28

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="request_completed" from="Button/HTTPRequest" to="." method="_on_http_request_request_completed"]
